# cororinglib

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
docs/: Doxyfile.in
include/: buffer.hpp  iouring.hpp  ring.hpp  sockets.hpp
include/cororing/: buffer.hpp  perftools.hpp  ring.hpp  sockets.hpp
src/: iouring.cpp  perftools.cpp  ring.cpp  sockets.cpp
tests/: CMakeLists.txt  coroutine_accept.cpp  coroutine_stdinout.cpp  echo_client.cpp  echo_common.hpp  echo_server.cpp  iouring_accept_test.cpp  iouring_stdinout_test.cpp  sockets.cpp
